--- a/index.html
+++ b/index.html
@@ -12,109 +12,109 @@
 </head>
 
 <body>
-  <div class="grid__container">
+  <div class="grid-container">
 
     <!-- component 1 -->
-    <header class="header__block">
-      <figure class="header__block__company--logo">
+    <header class="header-block">
+      <figure class="header-block__company-logo">
         <img src="./images/logo.svg" alt="company logo">
       </figure>
-      <button class="header__block__trial--button">Try It Free</button>
+      <button class="header-block__trial-button">Try It Free</button>
     
-    <h1 class="header__block__product--title">Build The Community Your Fans Will Love</h1>
-    <p class="header__block__product--info">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+    <h1 class="header-block__product-title">Build The Community Your Fans Will Love</h1>
+    <p class="header-block__product-info">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
       Create connections with your users as you engage in genuine discussion.</p>
-    <button class="header__block__product__trial--button">Get Started For Free</button>
+    <button class="header-block__product-trial-button">Get Started For Free</button>
 
-    <figure class="header__block__product--illustration">
+    <figure class="header-block__product-illustration">
       <img src="./images/illustration-mockups.svg" alt="illustration mockup">
     </figure>
     </header>
 
     <!-- component 2 -->
-    <main class="grow__together__block">
-      <h2 class="grow__together__block--feature-title">Grow Together</h2>
-      <p class="grow__together__block--feature-info">Generate meaningful discussions with your audience and build a strong, loyal community. 
+    <main class="grow-together-block">
+      <h2 class="grow-together-block__feature-title">Grow Together</h2>
+      <p class="grow-together-block__feature-info">Generate meaningful discussions with your audience and build a strong, loyal community. 
         Think of the insightful conversations you miss out on with a feedback form.</p>
-        <figure class="grow__together__block--feature-image">
+        <figure class="grow-together-block__feature-image">
           <img src="./images/illustration-grow-together.svg" alt="grow together image">
         </figure>
     </main>
 
     <!-- component 3 -->
-    <article class="flowing__conversation__block" role="region" aria-labelledby="flowing-conversations">
-      <h2 class="flowing__conversations__block--feature-title" id="flowing__conversations">Flowing Conversations</h2>
-      <p class="flowing__conversations__block--feature-info">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+    <article class="flowing-conversations-block" role="region" aria-labelledby="flowing-conversations">
+      <h2 class="flowing-conversations-block__feature-title" id="flowing__conversations">Flowing Conversations</h2>
+      <p class="flowing-conversations-block__feature-info">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
         have just-in-time loading for a more natural flow.</p>
-      <figure class="flowing__conversations__block--feature-image">
+      <figure class="flowing-conversations-block__feature-image">
         <img src="./images/illustration-flowing-conversation.svg" alt="flowing conversations">
       </figure>  
     </article>
 
     <!-- component 4 -->
-    <article class="your__users__block" role="region" aria-labelledby="your-users">
-      <h2 class="your__users__block--feature-title" id="your-users">Your Users</h2>
-      <p class="your__users__block--feature-info">It takes no time at all to integrate Huddle with your app's authentication solution. 
+    <article class="your-users-block" role="region" aria-labelledby="your-users">
+      <h2 class="your-users-block__feature-title" id="your-users">Your Users</h2>
+      <p class="your-users-block__feature-info">It takes no time at all to integrate Huddle with your app's authentication solution. 
         This means, once signed in to your app, your6 users can start chatting immediately.</p>
-        <figure class="your__users__block--feature-image">
+        <figure class="your-users-block__feature-image">
           <img src="./images/illustration-your-users.svg" alt="your users image">
         </figure>
     </article>
 
         <!-- component 5 -->
-        <footer class="footer__block">
-          <article class="footer__block__trial--info">
-            <h2 class="footer__block__trial--info-title">Ready To Build Your Community?</h2>
-            <button class="footer__block__trial--info-button">Get Started For Free</button>
+        <footer class="footer-block">
+          <article class="footer-block__trial-info">
+            <h2 class="footer-block-trial-info__title">Ready To Build Your Community?</h2>
+            <button class="footer-block-trial-info__button">Get Started For Free</button>
           </article>
 
-          <img src="./images/logo-footer.svg" class="footer__block__company-logo" alt="company logo">
+          <img src="./images/logo-footer.svg" class="footer-block__company-logo" alt="company logo">
 
-          <section class="footer__block__location--details">
-            <figure class="footer__block__location--details-icon">
+          <section class="footer-block__location-details">
+            <figure class="footer-block-location-details__icon">
               <img src="./images/icon-location.svg" alt="location icon">
             </figure>
-            <h3 class="footer__block__location--details-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            <h3 class="footer-block-location-details__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua</h3>
           </section>
 
-          <section class="footer__block__phone-details">
-            <figure class="footer__block__phone--details-icon">
+          <section class="footer-block__phone-details">
+            <figure class="footer-block-phone-details__icon">
               <img src="./images/icon-phone.svg" alt="mobile icon">
             </figure>
-            <h3 class="footer__block__phone--details-info">+1-543-123-4567</h3>
+            <h3 class="footer-block-phone-details__info">+1-543-123-4567</h3>
           </section>
 
-          <section class="footer__block__email--details">
-            <figure class="footer__block__email--details-icon">
+          <section class="footer_block__email-details">
+            <figure class="footer-block-email-details__icon">
               <img src="./images/icon-email.svg" alt="email icon">
             </figure>
-            <h3 class="footer__block__email--details-info">example@huddle.com</h3>            
+            <h3 class="footer-block-email-details__info">example@huddle.com</h3>            
           </section>
 
-          <p class="footer__block--about-us">About Us</p>
-          <p class="footer__block--what-we-do">What We Do</p>
-          <p class="footer__block-faq">FAQ</p>
-          <p class="footer__block--career">Career</p>
-          <p class="footer__block--blog">Blog</p>
-          <p class="footer__block--contact-us">Contact Us</p>
+          <p class="footer-block__about-us">About Us</p>
+          <p class="footer-block__what-we-do">What We Do</p>
+          <p class="footer-block__faq">FAQ</p>
+          <p class="footer-block__career">Career</p>
+          <p class="footer-block__blog">Blog</p>
+          <p class="footer-block__contact-us">Contact Us</p>
 
-          <div class="footer__block--scial-component">
+          <div class="footer-block-scial-component">
             <!-- <li><i class="footer__block__social-icon fa__brands fa__facebook-f"></i></li>
             <li><i class="footer__block__social-icon fa__brands fa__twitter"></i></li>
             <li><i class="footer__block__social-icon fa__brands fa__instagram"></i></li> -->
-            <figure class="footer__block__soial-component__fb-icon">
+            <figure class="footer-block-soial-component__fb-icon">
               <img src="./images/facebook-f-brands.svg" alt="facebook icon">  
             </figure>
-            <figure class="footer__block__social-component__twitter-icon">
+            <figure class="footer-block-social-component__twitter-icon">
               <img src="./imaged/twitter-brands.svg" alt="twitter icon">
             </figure>
-            <figure class="footer__block__social-component__instagram-icon">
+            <figure class="footer-block-social-component__instagram-icon">
               <img src="./imaged/instagram-brands.svg" alt="instagram icon">
             </figure>
           </div>
 
-          <p class="footer__block__copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
+          <p class="footer-block__copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
 
           <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
